--- a/asset1/css/buiseness.css
+++ b/asset1/css/buiseness.css
@@ -66,6 +66,8 @@ a {
 
 .email_img img {
   border-radius: 50%;
+  width: 1rem;
+  height: 1rem;
 }
 
 .email_text p {
@@ -351,3 +353,40 @@ text-transform: capitalize;
   margin-top: 1.25rem;
 }
 /* main section ends */
+
+@media only screen and (max-width:1199px){
+
+  
+  .academy_pic img {
+    width: 100%;
+    height: 275px;
+    border-radius: 0.625rem;
+  }
+
+  .club_logo img {
+    width: 4.71613rem;
+    height: 5.60594rem;
+  }
+  
+  .club_logo {
+    width: 10.5rem;
+    height: 10.5rem;
+    border-radius: 50%;
+    background-color: #fff;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    position: absolute;
+    top: 65%;
+    left: 10%;
+    border: 1px solid #dcdcdc;
+  }
+  .buiseness_left {
+    width: 100%;
+  }
+
+  .buiseness_right {
+    width: 100%;
+  }
+  
+}
